# EasiShell

./: .gitattributes  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/ps-core/: Cargo.toml
crates/ps-core/src/: lib.rs
crates/ps-core/src/paramspec/: mod.rs
crates/ps-core/src/runner/: events.rs  interp.rs  mod.rs  spawn.rs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  runs.rs  scripts.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  scripts_repo.rs
src-tauri/src/history/: mod.rs  naming.rs  writer.rs
src-tauri/src/run_manager/: mod.rs
src/lib/features/: Workspace.svelte
src/lib/features/runner/: RunPanel.svelte
src/lib/features/scripts/: ScriptEditor.svelte  ScriptList.svelte
src/lib/ipc/: api.ts
src/lib/ipc/bindings/: ParamKind.ts  ParamSpec.ts  RunArg.ts  RunEvent.ts  RunStatus.ts  Script.ts  ScriptInput.ts
src/lib/params/: ParamBuilder.svelte  ParamForm.svelte
src/lib/stores/: scripts.svelte.ts
src/lib/ui/: CodeEditor.svelte  Console.svelte
