[package]
name = "easishell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EasiShell — Tauri application shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easishell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ps-core = { path = "../crates/ps-core" }
# we only need the channel + spawn bits here; the heavy process work lives in ps-core
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
# local-time stamps for the run-log filenames
chrono = { version = "0.4", features = ["clock"] }
# bundled = compiles SQLite in, so theres no system dependency to chase on a fresh box
rusqlite = { version = "0.32", features = ["bundled"] }

