[package]
name = "ps-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared PowerShell execution core (process runner, tools, guardrails, IPC types). Used by the Tauri app and the elevated broker."

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
which = "7"
